syntax = "proto3";

package rivet.backend.pkg.module.game_version_prepare;

import "proto/common.proto";
import "proto/backend/module.proto";

message Request {
	rivet.backend.module.GameVersionConfig config = 1;
	rivet.common.Uuid game_id = 2;
}

message Response {
	rivet.backend.module.GameVersionConfigCtx config_ctx = 1;
}
