syntax = "proto3";

package rivet.backend.pkg.module.game_version_publish;

import "proto/common.proto";
import "proto/backend/module.proto";

message Request {
	rivet.common.Uuid version_id = 1;
	rivet.backend.module.GameVersionConfig config = 2;
	rivet.backend.module.GameVersionConfigCtx config_ctx = 3;
}

message Response {

}
